# bioelectric_control_panel

./: .gitignore  CHANGELOG.md  Dataset-First Exploration of Bioelectric Strange-Attractors_ Architectures, Metrics, and Clinical Horizons.md  Dockerfile  README.md  architecture.md  pyproject.toml  roadmap.md
.github/workflows/: docker.yml
b_sacp/: __init__.py
b_sacp/analysis/: invariant_measure.py  jacobian.py  lyapunov.py  poincare.py  rqa.py  smoke_ib3d_no_scipy.py
b_sacp/models/: grytsay_cell.py  itik_banks.py
b_sacp/pipelines/: bcp_integration.py
b_sacp/sweep/: parameter_sweep.py
b_sacp/ui/: control_panel.py
bcp/: cli.py  sdk.py
bcp/api/: main.py  schemas.py
bcp/core/: attractor.py  chaos.py  chaos_advanced.py  guardrails.py  metrics.py  quality.py  stream.py
bcp/io/: config.py  maes_interface.py
bcp/tools/: cardio_shim.py  stream.py  ws_bridge.py
bcp_frontend_v1/: README.md  index.html  package-lock.json  package.json  vite.config.ts
bcp_frontend_v1/src/: App.tsx  main.tsx  styles.css
data/outgoing/: README.md  long.csv  manifest.json
dataset_pipeline/: README.md  __init__.py  cli.py  config_default.json  config_load.py  ingest_sources.py  io_load.py  pipeline.py  signal_ops.py  stats_ops.py
docs/: API.md  MIGRATION.md  Vision.md  WS_BRIDGE.md
scripts/: plot_grid_heatmap.py  plot_poincare_heatmap.py  run_grid_sweep.py  run_gry_alpha_sweep.py  run_kar_line_sweep.py  run_smoke_ib3d_no_scipy.py
tests/integration/: test_downloads.py  test_nwb_validate.py  test_zarr_validate.py
tests/unit/: test_attractor.py  test_chaos_metrics.py  (+2 more)
(+20 files in other folders)
