[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioelectric-control-panel"
version = "0.1.1"
description = "Bioelectric data ingestion, validation, and analysis service (FastAPI) and SDK"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
  {name = "BCP Team"}
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.22",
  "numpy>=1.24",
  "pydantic>=2",
  "pydantic-settings>=2",
]

[project.optional-dependencies]
bio = [
  "pynwb>=2.6",
  "zarr>=2.16",
  "xarray>=2024.1",
  "ome-zarr>=0.8",
  "scipy>=1.10",
  "pandas>=2.0",
]
dev = [
  "black>=24.0",
  "ruff>=0.4",
  "mypy>=1.8",
  "pre-commit>=3.6",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
viz = [
  "matplotlib>=3.8",
]

[project.scripts]
bcp-api = "bcp.cli:run_api"
bcp-stream = "bcp.tools.stream:main"
bcp-shim-cardiac = "bcp.tools.cardio_shim:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
extend-select = ["I"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
